gtest hello world example working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,40 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("pybind-test-5")
 
+# force static runtime libraries for msvc builds
+if(MSVC)
+  set(variables 
+    CMAKE_CXX_FLAGS_DEBUG
+    CMAKE_CXX_FLAGS_RELEASE
+	CMAKE_CXX_FLAGS_RELWITHDEBINFO
+	CMAKE_CXX_FLAGS_MINSIZEREL
+  )
+  foreach(variable ${variables})
+	if(${variable} MATCHES "/MD")
+	  string(REGEX REPLACE "/MD" "/MT" ${variable} "${${variable}}")
+	endif()
+  endforeach()
+endif()
+
 include_directories(include)
-add_subdirectory("extern/xtl")
-add_subdirectory("extern/xtensor")
-include_directories("extern/xtl/include")
-include_directories("extern/xtensor/include")
+#add_subdirectory("extern/xtl")
+#add_subdirectory("extern/xtensor")
+#include_directories("extern/xtl/include")
+#include_directories("extern/xtensor/include")
 
 # Add source to this project's executable.
-add_executable (pybind-test-5  "include/pybind-test-5.h" "src/pybind-test-5.cpp" "src/hello-world.cpp" "include/hello-world.h")
+add_library(xtensor_interp_lib src/xtensor-interp.cpp)
+add_executable(xtensor_interp src/main.cpp)
+target_link_libraries(xtensor_interp xtensor_interp_lib)
 
 # TODO: Add tests and install targets if needed.
+add_subdirectory("extern/googletest")
+enable_testing()
+
+include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+
+add_executable(runUnitTests test/test_project.cpp)
+
+target_link_libraries(runUnitTests xtensor_interp_lib gtest GTest::gtest_main)
+
+add_test(NAME that-test-I-made COMMAND runUnitTests)
