Make the findIndex function always round DOWN

--- a/XTensorInterp/CMakeLists.txt
+++ b/XTensorInterp/CMakeLists.txt
@@ -3,6 +3,16 @@ project(XTensorInterp)
 file(GLOB_RECURSE INCLUDE_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR} "*.hpp" "*.h")
 file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
 
+
+if(MSVC)
+    set(CMAKE_EXE_LINKER_FLAGS /MANIFEST:NO)
+endif()
+
+# set(XTENSOR_USE_XSIMD 1)
+# set(XTENSOR_USE_TBB 1)
+# xsimd and TBB dependencies are automatically
+# searched when the following is executed
+
 set(
     INCLUDE_DIRECTORIES
     ${CMAKE_CURRENT_SOURCE_DIR}
@@ -11,6 +21,7 @@ set(
 
 set(
     LINK_LIBRARIES
+    xtensor
 )
 
 add_library(
@@ -39,6 +50,5 @@ target_include_directories(
 target_link_libraries(
     XTensorInterp
     PUBLIC
-    xtensor
     ${LINK_LIBRARIES}
 )
