--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -3,7 +3,7 @@ include(FetchContent)
 FetchContent_Declare(
   googletest
   GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG        703bd9caab50b139428cea1aaff9974ebee5742e # release-1.10.0
+  GIT_TAG        v1.13.0
   SYSTEM
 )
 
