--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,18 +9,14 @@ enable_testing()
 
 file(GLOB ctests_SRC CONFIGURE_DEPENDS "*.cpp")
 
-target_compile_options(gtest PRIVATE "-w")
+set(CMAKE_COMPILE_WARNING_AS_ERROR OFF)
+set_target_properties(gtest gtest_main PROPERTIES COMPILE_WARNING_AS_ERROR OFF)
+# target_compile_options(gtest PRIVATE "-w")
 
 add_executable(
     XTensorInterp_unittests
     ${ctests_SRC}
 )
-
-set_property(TARGET gtest PROPERTY COMPILE_WARNING_AS_ERROR OFF)
-set_property(TARGET gtest_main PROPERTY COMPILE_WARNING_AS_ERROR OFF)
-
-set_target_properties(gtest PROPERTIES COMPILE_WARNING_AS_ERROR OFF)
-set_target_properties(gtest_main PROPERTIES COMPILE_WARNING_AS_ERROR OFF)
 
 target_link_libraries(
     XTensorInterp_unittests
