single interp point working

--- a/XTensorInterp/CMakeLists.txt
+++ b/XTensorInterp/CMakeLists.txt
@@ -58,3 +58,5 @@ target_compile_features(
     PRIVATE
     cxx_std_17
 )
+
+target_compile_definitions(XTensorInterp PRIVATE CMAKE_EXPORT_COMPILE_COMMANDS=1)
