--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
-    "c-cpp-flylint.clang.includePaths": [
-        "${workspaceRoot}",
-    ],
     "cmake.copyCompileCommands": "${workspaceFolder}/compile_commands.json",
     "editor.rulers": [
         120
@@ -113,14 +110,15 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "regex": "cpp"
     },
-    "cSpell.words": [
-        "DATAMODELS",
-        "Grib",
-        "proto",
-        "routinglib",
-        "TWSDA",
-        "Vect"
+    "C_Cpp.intelliSenseEngine": "default",
+    "cmake.buildDirectory": "${workspaceFolder}/build",
+    "clangd.arguments": [
+        "--compile-commands-dir=${workspaceFolder}/build/Debug",
+        "--completion-style=detailed",
+        "--header-insertion=never"
     ],
+    "C_Cpp.intelliSenseEngineFallback": "enabled",
 }
